<resources>
    <string name="app_name">PosFacisaJWTAuth</string>
    <string name="not_log_in">Não foi possível iniciar a sessão</string>
    <string name="log_out">Sair</string>
    <string name="revoke">Revogar</string>
    <string name="not_close_session">Não foi possível fechar a sessão</string>
    <string name="not_revoke">Não foi possível revogar o acesso</string>
    <string name="not_firebase_auth">Não foi possível autenticar com Firebase</string>
    <string name="get_random_quote">Get random quote</string>
    <string name="click_to_get_new_quote">Click to get a new quote</string>
    <string name="getting_access_token">Getting access token . . .</string>
    <string name="getting_random_quote">Getting new random quote . . .</string>
</resources>
